tests/snapshots/run_wpt_conformance__coreml_convTranspose2d_float16_4D_input_and_filter_tensors_options_inputLayout_nhwc_options_filterLayout_ohwi.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float16 4D input and filter tensors options.inputLayout=nhwc options.filterLayout=ohwi, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983272300_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f16[1, 3, 3, 1];
  }

  consts {
    operand_0: f16[2, 3, 3, 1] @bytes([228, 58, 4, 57, 24, 57, 181, 58, 155, 47, 240, 59, 66, 53, 254, 58, 196, 57, 215, 59, 230, 43, 39, 53, 0, 58, 74, 54, 107, 48, 139, 52, 199, 54, 163, 48]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[], filterLayout="ohwi", groups=1, inputLayout="nhwc", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
